[metadata]
name = tropycal
version = 0.0.1
description = Package for retrieving and analyzing tropical cyclone data
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomer Burg, Sam Lillo
platform = any
keywords = meteorology, weather
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Atmospheric Science
    Intended Audience :: Science/Research
    Operating System :: OS Independent
url = https://github.com/tropycal/tropycal
project_urls =
    Documentation = https://tropycal.readthedocs.io/en/latest/
    Source Code = https://github.com/tropycal/tropycal

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.6
install_requires =
    matplotlib>=2.1.0
    numpy>=1.12.0
    scipy>=0.17.0
    xarray>=0.10.7
    pandas>=0.22.0
    geopy>=1.18.1

[options.packages.find]
where = src
